[workspace]
resolver = "2"
members = ["contracts/*", "contracts-retroshade/*"]

[workspace.dependencies]
soroban-sdk = "20.3.2"
fixed-point-math = "0.0.2"
retroshade-sdk = { version = "0.1.0", workspace = true }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
