[package]
name = "pools-retroshades"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
fixed-point-math = { workspace = true }
retroshade-sdk = { version = "0.1.0", workspace = true, optional = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
fixed-point-math = { workspace = true }

[features]
mercury = ["dep:retroshade-sdk"]
